# wisp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  config.toml  docker-compose.yml  fly.toml  justfile
.github/workflows/: build-darwin.yml  build-linux.yml  build-windows.yml  build.yml  clippy.yml  fly.yml  lint.yml  release.yml
.woodpecker/: clippy.yaml  publish.yaml
src/: config.rs  constants.rs  main.rs
src/api/: fourchan.rs  mod.rs  tiktok.rs  xkcd.rs
src/commands/: general.rs  mod.rs  owner.rs
src/commands/misc/: avatar.rs  chars.rs  cute.rs  faye.rs  gemini.rs  help.rs  mod.rs  ping.rs  role.rs  spotify.rs  tts.rs  user.rs  webm.rs  wolfram.rs  xkcd.rs
src/commands/moderation/: clear.rs  mod.rs
src/commands/owner/: echo.rs  mod.rs  ptolemaea.rs  register.rs  sys.rs
src/modules/: tiktok.rs
src/plugins/: mod.rs  tiktok.rs
src/sources/: fourchan.rs  gemini.rs  mod.rs  tiktok.rs  tts.rs  unicode.rs  wolfram.rs  xkcd.rs
