[package]
name = "wisp"
version = "0.3.0"
authors = ["fawn <fawn@envs.net>"]
edition = "2021"
repository = "https://github.com/fawni/wisp"
license = "ISC"

[dependencies]
poise = "0.5.7"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.192", features = ["derive"] }
twink = { version = "1.1.2", features = ["12-hour"] }
dotenvy = "0.15.7"
thiserror = "1.0.50"

reqwest = { version = "0.11.22", features = ["json"] }
nanorand = "0.7.0"
regex = "1.10.2"

chrono = "0.4.31"
chrono-tz = "0.8.4"

system_shutdown = "4.0.1"
once_cell = "1.18.0"
faye = "0.6.0"

[profile.release]
lto = true
codegen-units = 1
