[package]
name = "wisp"
version = "0.3.0"
authors = ["fawn <fawn@envs.net>"]
edition = "2021"
repository = "https://github.com/fawni/wisp"
license = "ISC"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.219", features = ["derive"] }
twink = { version = "1.1.3", features = ["12-hour"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
once_cell = "1.21.3"

reqwest = { version = "0.12.20", features = ["json"] }
nanorand = "0.8.0"
regex = "1.11.1"
faye = { version = "0.6.2", default-features = false }

chrono = "0.4.41"
chrono-tz = "0.10.3"
urlencoding = "2.1.3"
base64 = "0.22.1"
serde_json = "1.0.140"

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
